--- a/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
+++ b/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
@@ -1,4 +1,4 @@
-<fieldset class="" style="width:360px;margin-left: 7px;">
+<fieldset class="" style="width:360px;margin-left: 7px;" ng-controller = "bookingStatisticsController">
     <legend class="searchbox-border">Statistics</legend>
     <div style="height:192px;" id="customerBookingGridID" class = "bookingHistoryGrid">
     	<div class="gridStyle" ng-grid="gridStatisticsData" style="height:100%;margin:0px;background-color:transparent;"></div>
