Dispatch Changes: Added Vehicle login and Vacant API integrations

--- a/sigmaCabs/app/views/dispatches/dispatcherMainView.html
+++ b/sigmaCabs/app/views/dispatches/dispatcherMainView.html
@@ -1,9 +1,9 @@
 <div >
 	<div id="topContainerID">
-	    <div data-ng-include="vehicalInformationForm" class="left"></div>
-	    <!-- <div data-ng-include="vehicalLoginForm" class="left"></div>
-	    <div data-ng-include="vehicalVacantForm" class="left"></div> -->
-	    <div data-ng-include="vehicalAllotForm" class="left"></div>
+	    <div data-ng-include="vehicleInformationForm" class="left"></div>
+	    <!-- <div data-ng-include="vehicleLoginForm" class="left"></div> -->
+	    <div data-ng-include="vehicleVacantForm" class="left"></div>
+	    <!-- <div data-ng-include="vehicleAllotForm" class="left"></div> -->
 	    <div data-ng-include="chatForm" class="left"></div>
 	    <div data-ng-include="bookingStatistics" class="left"></div>
 	    <p class="clear"/>
@@ -11,7 +11,7 @@
 	<div data-ng-include="currentMonthData" style="clear:both;"></div>
 	<div class="last-month-data">
 	    <div data-ng-include="lastMonthHistory" class="left" style="margin: 5px 5px 0 0;width: 32.8%;"></div>
-	    <div data-ng-include="vehicalData" class="left" style="margin: 5px 5px 0 0;width: 32.8%;"></div>
-	    <div data-ng-include="vehicalPerformance" class="left" style="margin: 5px 5px 0 0;width: 32.8%;"></div>
+	    <div data-ng-include="vehicleData" class="left" style="margin: 5px 5px 0 0;width: 32.8%;"></div>
+	    <div data-ng-include="vehiclePerformance" class="left" style="margin: 5px 5px 0 0;width: 32.8%;"></div>
 	</div>
 </div>
