--- a/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
@@ -1,4 +1,4 @@
-<fieldset class="bookingFormController left" style="margin-left: 7px;">
+<fieldset class="bookingFormController left" data-ng-controller="vehicleActivityController" style="margin-left: 7px;">
     <legend class="searchbox-border">Vehicle Allot</legend>
 
     <div class="fieldContainer  relative left">
