--- a/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
@@ -1,4 +1,4 @@
-<fieldset class="bookingFormController left" style="margin-left: 7px;">
+<fieldset class="bookingFormController left" data-ng-controller="vehicleActivityController" style="margin-left: 7px;">
     <legend class="searchbox-border">Vehicle Login</legend>
 
     <div class="fieldContainer  relative left">
@@ -51,9 +51,9 @@
     <hr class="buttonSpliter" />
     <div class="mainButtonContainer">
         <div>
-            <button class="btnCompact btn-danger">Login</button> <!--  data-ng-click="fnOpenCancelBooking()" data-ng-show="bShowCancel" -->
-            <button class="btnCompact btn-success">Change Status</button>
-            <button class="btnCompact btn-success">Change Phone No.</button>
+            <button class="btnCompact btn-success" data-ng-click="fnVehicleLogin()" data-ng-show="bloginShow">Login</button>
+            <button class="btnCompact btn-success" data-ng-click="fnChangeVehicleStatus()">Change Status</button>
+            <button class="btnCompact btn-success" data-ng-click="fnChangeVehiclePhone()">Change Phone No.</button>
         </div>
         <p class="clear"/>
     </div>
