Added disposition form.. chaned logic to show vehicleTypes and vehicleNames in DD.
Open existing booking

--- a/sigmaCabs/app/styles/booking.scss
+++ b/sigmaCabs/app/styles/booking.scss
@@ -260,3 +260,7 @@ tr:nth-child(odd) {
 .cust-request .fieldContainer{
   margin: 0px 5px 0px 5px;
 }
+
+.modalClass.disposition-booking-container .modal-dialog{
+  width: 420px !important;
+}
