Single tariff , Single booking , statistics related changes

--- a/sigmaCabs/app/styles/booking.scss
+++ b/sigmaCabs/app/styles/booking.scss
@@ -264,3 +264,15 @@ tr:nth-child(odd) {
 .modalClass.disposition-booking-container .modal-dialog{
   width: 420px !important;
 }
+.tariffVehicles{
+  margin-left: 10px;
+}
+.singleTariffContainer{
+  padding :10px;
+}
+.tariffDetailsContainer{
+  padding-left : 10px;
+}
+.tariffFieldContainer{
+  height:25px;
+}
