--- a/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
+++ b/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
@@ -1,57 +1,6 @@
-<fieldset data-ng-controller="bookingStatisticsController" class="" style="width:360px;margin-left: 7px;">
+<fieldset class="" style="width:360px;margin-left: 7px;" ng-controller = "bookingStatisticsController">
     <legend class="searchbox-border">Statistics</legend>
     <div style="height:192px;" id="customerBookingGridID" class = "bookingHistoryGrid">
     	<div class="gridStyle" ng-grid="gridStatisticsData" style="height:100%;margin:0px;background-color:transparent;"></div>
     </div>
 </fieldset>
-<!-- <div data-ng-controller="bookingStatisticsController">
-	<div class = "staticsContainer">
-		<legend class="searchbox-border">Statistics</legend>
-		<table class = "bookingsTable bokingLabel stastics" border="1">					
-			<tr>
-				<th></th>
-				<th colspan="2">Small</th>
-				<th>Medium</th>
-				<th colspan="3">Big</th>
-				
-			</tr>
-			<tr>
-				<th>Vehicle</th>
-				<th>Indica</th>
-				<th>Vista</th>
-				<th>Verito</th>
-				<th>Xylo</th>
-				<th>Innova</th>
-				<th>Tavera</th>
-			</tr>
-			<tr>
-				<th>Available</th>
-				<td>55</td>
-				<td>555</td>
-				<td>555</td>
-				<td>555</td>
-				<td>555</td>
-				<td>555</td>
-			</tr>
-			<tr>
-				<th>Bookings</th>
-				<td>55</td>
-				<td>555</td>
-				<td>555</td>
-				<td>555</td>
-				<td>555</td>
-				<td>555</td>
-			</tr>
-			<tr>
-				<th>Expected</th>
-				<td>55</td>
-				<td>555</td>
-				<td>555</td>
-				<td>555</td>
-				<td>555</td>
-				<td>555</td>
-			</tr>
-		</table>
-		
-	</div>
-</div> -->
