Added generic display fields of customer like tripCount...

--- a/sigmaCabs/app/views/booking.html
+++ b/sigmaCabs/app/views/booking.html
@@ -24,13 +24,13 @@
 	        </div>
 	        <div class="fieldContainer left marginRightLeft5 bookingInput">
 	            <label class="labelCompact">Customer ID</label>
-	            <span class = "bokingLabel" data-ng-bind="customerID"></span>
+	            <span class = "bokingLabel" data-ng-bind="headCustomerCode"></span>
 	            <!-- <input type="text" ng-model="customer.customerDetails.customerID" class="left validate[required,maxSize[128]] textFieldCompact"  /> -->
 	        </div>
 
 	        <div class="fieldContainer left marginRightLeft5 bookingInput">
 	            <label class="labelCompact">Booking Type</label>
-	            <span class = "bokingLabel" data-ng-bind="bookingType"></span>
+	            <span class = "bokingLabel" data-ng-bind="headBookingType"></span>
 	            <!-- <input type="text" ng-model="customer.customerDetails.customerID" class="left validate[required,maxSize[128]] textFieldCompact"  /> -->
 	        </div>
 	        <div class="callTransfer left marginRightLeft5">    	
@@ -49,7 +49,7 @@
 
 	        <div class="fieldContainer right marginRightLeft5">
 	            <label class="labelCompact bokingSelect">Booking Number</label>
-	            <span class = "bokingLabel" data-ng-bind="customerID"></span>
+	            <span class = "bokingLabel" data-ng-bind="headBookingCode"></span>
 	        </div>
 		</div>
 		<div class="soft-msg" data-ng-include="viewLoader"></div>
