--- a/sigmaCabs/app/views/bookings/bookingForm.html
+++ b/sigmaCabs/app/views/bookings/bookingForm.html
@@ -35,7 +35,7 @@
     </div>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes"></select>
+        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpDetails.tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes"></select>
     </div>
     <div class="fieldContainer  relative right">
         <label class="labelCompact" style="width: 113px;">Sub-Journey Type</label>
