--- a/sigmaCabs/app/views/bookings/bookingHistory.html
+++ b/sigmaCabs/app/views/bookings/bookingHistory.html
@@ -3,19 +3,19 @@
     <div class="historyBarContainer">
     	<div class="left historyBarItem">
     		<span class="historyBarLabel">Category: </span>
-    		<span class="historyBarValue">New</span>
+    		<span class="historyBarValue">{{headCustomerCategory}}</span>
     	</div>
     	<div class="left historyBarItem">
     		<span class="historyBarLabel">Grade: </span>
-    		<span class="historyBarValue">Gold</span>
+    		<span class="historyBarValue">{{ headCustomerGrade }}</span>
     	</div>
     	<div class="left historyBarItem">
     		<span class="historyBarLabel">Trip Count: </span>
-    		<span class="historyBarValue">8888</span>
+    		<span class="historyBarValue">{{headCustomerTripCount}}</span>
     	</div>
     	<div class="left historyBarItem">
     		<span class="historyBarLabel">BOD: </span>
-    		<span class="historyBarValue">1287</span>
+    		<span class="historyBarValue">{{headDaysBookingsCount}}</span>
     	</div>
     	<div class="left historyBarItem">
     		<span class="historyBarLabel"><a class="viewAllHistoryLink">View History</a></span>
