Added shortcut plugin, made label changes of customer Search filedset. removed bug in multivehicle for datepicker.

--- a/sigmaCabs/app/views/bookings/personalForm.html
+++ b/sigmaCabs/app/views/bookings/personalForm.html
@@ -17,17 +17,17 @@
             <input checked class="left smsCheckbox" type="checkbox" value="">
         </div>
         <div class="fieldContainer clearBoth relative ">
-            <label class="labelCompact">Mobile</label>
+            <label class="labelCompact">Alt. Ph.</label>
             <input type="text" ng-model="customerDetails.mobile" class="left validate[required,maxSize[128]] textFieldCompact"/>
             <input class="left smsCheckbox" type="checkbox" value="">
         </div>
         <div class="fieldContainer clearBoth relative ">
-            <label class="labelCompact">Alt. Ph.</label>
+            <label class="labelCompact">Pas. Ph.</label>
             <input type="text" ng-model="bookingDetails.primaryMobile" class="left validate[required,maxSize[128]] textFieldCompact" />
             <input class="left smsCheckbox" type="checkbox" value="">
         </div>
         <div class="fieldContainer clearBoth relative" >
-            <label class="labelCompact">Alt. Name.</label>
+            <label class="labelCompact">Pas. Name</label>
             <input type="text" ng-model="bookingDetails.primaryPassanger" style="position:absolute;" class="validate[required,maxSize[128]] textFieldCompact" />
         </div>
         <hr class="buttonSpliter" />
