Dispatcher: Added search API integration and changed Files as suggested

--- a/sigmaCabs/app/views/dispatches/vehicleBookingComplaint.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingComplaint.html
@@ -18,6 +18,10 @@
             <fieldset class="left">
                 <legend class="searchbox-border">Complaint</legend>
                 <div class="fieldContainer  relative">
+                    <label class="labelCompact">Complaint By</label><!--  ng-model="" -->
+                    <select class="validate[maxSize[36]] selectFieldCompact"></select>
+                </div>
+                <div class="fieldContainer  relative">
                     <label class="labelCompact">Reason</label><!--  ng-model="" -->
                     <select class="validate[maxSize[36]] selectFieldCompact"></select>
                 </div>
