Dispatch: Added vehicle login API and feedback html and controller added

--- a/sigmaCabs/app/views/dispatches/dispatcherMainView.html
+++ b/sigmaCabs/app/views/dispatches/dispatcherMainView.html
@@ -1,9 +1,9 @@
 <div >
 	<div id="topContainerID">
 	    <div data-ng-include="vehicleInformationForm" class="left"></div>
-	    <!-- <div data-ng-include="vehicleLoginForm" class="left"></div> -->
+	    <div data-ng-include="vehicleLoginForm" class="left"></div>
 	    <!-- <div data-ng-include="vehicleVacantForm" class="left"></div> -->
-	    <div data-ng-include="vehicleAllotForm" class="left"></div>
+	    <!-- <div data-ng-include="vehicleAllotForm" class="left"></div> -->
 	    <div data-ng-include="chatForm" class="left"></div>
 	    <div data-ng-include="bookingStatistics" class="left"></div>
 	    <p class="clear"/>
