--- a/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
@@ -1,6 +1,5 @@
 <fieldset class="bookingFormController left" data-ng-controller="vehicleActivityController" style="margin-left: 7px;">
     <legend class="searchbox-border">Vehicle Allot</legend>
-
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Pickup Date</label>
         <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
@@ -15,16 +14,12 @@
         </select>
     </div>
     <div class="fieldContainer  relative left">
-        <label class="labelCompact">Vehicle Name</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" >
-            <option>Choose</option>
-        </select>
+        <label class="labelCompact">Vehicle Type</label>
+        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-change="fnPopVehicleNames();" data-ng-model="tmpDetails.tmpVehicleType" data-ng-options="obj.id as obj.vehicleType for obj in vehicleTypes"></select>
     </div>
     <div class="fieldContainer  relative right">
-        <label class="labelCompact">Vehicle Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" >
-            <option>Choose</option>
-        </select>
+        <label class="labelCompact">Vehicle Name</label>
+        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-change="fnPopVehicleTypes();" data-ng-model="tmpDetails.tmpVehicleName" data-ng-options="obj.id as obj.vehicleName for obj in vehicleNames"></select>
     </div>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Pickup</label>
@@ -44,15 +39,11 @@
     </div>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" >
-            <option>Choose</option>
-        </select>
+        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpDetails.tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes"></select>
     </div>
     <div class="fieldContainer  relative right">
         <label class="labelCompact" style="width: 113px;">Sub-Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" >
-            <option>Choose</option>
-        </select>
+        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="bookingDetails.subJourneyType" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: tmpSelectedJourneyType.id}"></select>
     </div>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Landmark1</label>
