--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -8,17 +8,17 @@
         </div>
         <div class="fieldContainer clearBoth relative clearBoth">
             <label class="labelCompact">V.Owner Name </label>
-            <input type="text" ng-model="customer.customerDetails.name" class="left validate[required,maxSize[128]] textFieldCompact"  />
+            <input type="text" ng-model="vehicleMainDetials.owner.name" class="left validate[required,maxSize[128]] textFieldCompact"  />
             <span class="smsText">SMS</span>
         </div>
         <div class="fieldContainer clearBoth relative clearBoth">
-            <label class="labelCompact">Vehicle Ph. </label>
-            <input type="text" ng-model="customer.customerDetails.callerPhone" class="left validate[required,maxSize[128]] textFieldCompact" readonly />
+            <label class="labelCompact">Vehicle Ph.</label>
+            <input type="text" ng-model="vehicleMainDetials.details.registeredMobile" class="left validate[required,maxSize[128]] textFieldCompact" readonly />
             <input name="" checked class="left smsCheckbox" type="checkbox" value="">
         </div>
         <div class="fieldContainer clearBoth relative ">
             <label class="labelCompact">Owner No.</label>
-            <input type="text" ng-model="customer.customerDetails.mobile" class="left validate[required,maxSize[128]] textFieldCompact"/>
+            <input type="text" ng-model="vehicleMainDetials.owner.mobile" class="left validate[required,maxSize[128]] textFieldCompact"/>
             <input name="" class="left smsCheckbox" type="checkbox" value="">
         </div>
         <div class="fieldContainer clearBoth relative ">
@@ -28,9 +28,9 @@
         </div>
         <div class="fieldContainer clearBoth relative" >
             <label class="labelCompact">Driver Name</label>
-            <select class=" validate[maxSize[36]] selectFieldCompact" >
-            <option>Choose</option>
-        </select>
+            <select class="validate[maxSize[36]] selectFieldCompact" ng-model="vehicleMainDetials.driver">
+                <option>Choose</option>
+            </select>
         </div>
         <hr class="buttonSpliter" />
         <div class="clearBoth relative mainButtonContainer">
